add jquery ui and activate datepicker

--- a/django_project/web/templates/entry_form.html
+++ b/django_project/web/templates/entry_form.html
@@ -71,7 +71,7 @@
             <div class="row">
                 <label>
                     <span class="vp-form-label">{{form.pest_disease_name.label}}</span>
-                    <span class="vp-required-label"> &nbsp; *REQUIRED</span>
+                    <span class="vp-required-label">*REQUIRED</span>
 
                     {{form.pest_disease_name}}
                 </label>
@@ -83,10 +83,10 @@
             </div>
 
             <div class="row">
-                <div class="small-6 columns" style="margin-left:-15px">
+                <div class="small-5 columns" style="margin-left:-15px">
                     <label>
                         <span class="vp-form-label">{{form.entry_type.label}}</span>
-                        <span class="vp-required-label"> &nbsp; *REQUIRED</span>
+                        <span class="vp-required-label">*REQUIRED</span>
 
                         {{form.entry_type}}
                     </label>
@@ -96,10 +96,11 @@
                         {% endfor %}
                     {% endif %}
                 </div>
-                <div class="small-6 columns" style="margin-right:-15px">
+                <div class="small-7 columns" style="margin-right:-15px">
                     <label>
                         <span class="vp-form-label">{{form.occurence_date.label}}</span>
-                        <span class="vp-required-label"> &nbsp; *REQUIRED</span>
+                        <span class="vp-label-help-text"> &nbsp; (yyyy-mm-dd)</span>
+                        <span class="vp-required-label">*REQUIRED</span>
 
                         {{form.occurence_date}}
                     </label>
@@ -114,7 +115,7 @@
             <div class="row">
                 <label>
                     <span class="vp-form-label">IMAGES</span>
-                    <span class="vp-required-label"> &nbsp; *REQUIRED</span>
+                    <span class="vp-required-label">*REQUIRED</span>
 
                     {{form.images}}
                 </label>
@@ -181,6 +182,7 @@
             <div class="row" style="border-top: 1px solid #8A8A8A; padding-top: 25px;">
                 <label>
                     <span class="vp-form-label">{{form.harvest_date.label}}</span>
+                    <span class="vp-label-help-text"> &nbsp; (yyyy-mm-dd)</span>
 
                     {{form.harvest_date}}
                 </label>
@@ -236,6 +238,13 @@
 
 // Make textarea elemnts gave 4 rows
 $('textarea').attr('rows', 4);
+
+var datepickerOptions = {
+    dateFormat: "yy-mm-dd"
+};
+
+$('#id_occurence_date').datepicker(datepickerOptions);
+$('#id_harvest_date').datepicker(datepickerOptions);
 
 var cropFields = {{crop_fields | safe}};
 var individualEntries = {{individual_entries | safe}};
