--- a/django_project/web/templates/crop_field_form.html
+++ b/django_project/web/templates/crop_field_form.html
@@ -49,7 +49,7 @@
             <div class="row">
                 <label>
                     <span class="vp-form-label">{{form.crop_name.label}}</span>
-                    <span class="vp-required-label"> &nbsp; *REQUIRED</span>
+                    <span class="vp-required-label">*REQUIRED</span>
 
                     {{form.crop_name}}
                 </label>
@@ -64,7 +64,7 @@
                 {{form.area}}
                 <label>
                     <span class="vp-form-label">DRAW A CROP FIELD ON MAP</span>
-                    <span class="vp-required-label"> &nbsp; *REQUIRED</span>
+                    <span class="vp-required-label">*REQUIRED</span>
 
                     {% if form.area.errors %}
                         {% for error in form.area.errors %}
@@ -201,6 +201,11 @@
 
 // Make textarea elemnts gave 4 rows
 $('textarea').attr('rows', 4);
+
+var datepickerOptions = {
+    dateFormat: "yy-mm-dd"
+};
+$('#id_planting_date').datepicker(datepickerOptions);
 
 var cropFields = {{crop_fields | safe}};
 var individualEntries = {{individual_entries | safe}};
