--- a/django_project/web/templates/crop_field_detail.html
+++ b/django_project/web/templates/crop_field_detail.html
@@ -13,6 +13,16 @@
 
     <div class="row">
         <div class="small-8 columns vp-center">
+            <div class="slick-image-container">
+                {% for img in cropfield.images.all %}
+                    <a href="{{img.url}}"><img src="{{img.thumbnail_200x200.url}}" style="height:120px; width: 200px;"></a>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
+    <div class="row" style="margin-bottom: 50px; margin-top: 10px;">
+        <div class="small-8 columns vp-center">
             <table style="width: 100%;">
                 <tbody>
                     <tr style="border-bottom: 1px solid #ddd;">
@@ -111,6 +121,17 @@
 
 {% block extra_js %}
 <script type="text/javascript">
-    $(document).foundation();
+
+    $(document).ready(function() {
+        $(document).foundation();
+
+        $('.slick-image-container').slick({
+            infinite: true,
+            slidesToShow: 3,
+            slidesToScroll: 1,
+            dots: true,
+            arrows: true
+        });
+    });
 </script>
 {% endblock extra_js %}
