--- a/django_project/web/templates/entry_detail.html
+++ b/django_project/web/templates/entry_detail.html
@@ -35,11 +35,31 @@
     {% if entry.images %}
     <div class="row">
         <div class="small-8 columns vp-center">
-            <div class="slick-image-container">
-                {% for img in entry.images.all %}
-                    <a href="{{img.url}}"><img src="{{img.thumbnail_200x200.url}}" style="height:120px; width: 200px;"></a>
-                {% endfor %}
-            </div>
+            {% if entry.images.all|length == 1 %}
+                <div class="image-container image-container-1-image">
+                    {% for img in entry.images.all %}
+                        <a href="{{img.url}}"><img src="{{img.thumbnail_200x200.url}}" style="height:120px; width: 200px;"></a>
+                    {% endfor %}
+                </div>
+            {% elif entry.images.all|length == 2 %}
+                <div class="image-container image-container-2-images">
+                    {% for img in entry.images.all %}
+                        <a href="{{img.url}}"><img src="{{img.thumbnail_200x200.url}}" style="height:120px; width: 200px;"></a>
+                    {% endfor %}
+                </div>
+            {% elif entry.images.all|length == 3 %}
+                <div class="image-container image-container-3-images">
+                    {% for img in entry.images.all %}
+                        <a href="{{img.url}}"><img src="{{img.thumbnail_200x200.url}}" style="height:120px; width: 200px;"></a>
+                    {% endfor %}
+                </div>
+            {% else %}
+                <div class="slick-image-container">
+                    {% for img in entry.images.all %}
+                        <a href="{{img.url}}"><img src="{{img.thumbnail_200x200.url}}" style="height:120px; width: 200px;"></a>
+                    {% endfor %}
+                </div>
+            {% endif %}
         </div>
     </div>
     {% endif %}
@@ -49,6 +69,12 @@
             <table style="width: 100%;">
                 <tbody>
                     <tr style="border-bottom: 1px solid #ddd;">
+                        <td class="vp-table-head">CROP NAME</td>
+                        <td>
+                            {{ entry.crop_field.crop_name }}
+                        </td>
+                    </tr>
+                    <tr style="border-bottom: 1px solid #ddd;">
                         <td class="vp-table-head">PEST OR DISEASE</td>
                         <td>
                             {{ entry.get_entry_type_display|upper }}
@@ -57,8 +83,8 @@
                     <tr style="border-bottom: 1px solid #ddd;">
                         <td class="vp-table-head">OCCURANCE DATE</td>
                         <td>
-                            {% if entry.occurance_date %}
-                                {{entry.occurance_date}}
+                            {% if entry.occurence_date %}
+                                {{entry.occurence_date}}
                             {% else %}
                                 -
                             {% endif %}
@@ -68,7 +94,7 @@
                         <td class="vp-table-head">ESTIMATION OF AFFECTED AREA</td>
                         <td>
                             {% if entry.damage_estimation %}
-                                {{entry.damage_estimation}} %
+                                {{entry.damage_estimation}}%
                             {% else %}
                                 -
                             {% endif %}
@@ -125,7 +151,7 @@
                             <td class="vp-table-head">ESTIMATION OF DESTROYED HARVEST</td>
                             <td>
                                 {% if entry.harvest_destroyed %}
-                                    {{entry.harvest_destroyed}} %
+                                    {{entry.harvest_destroyed}}%
                                 {% else %}
                                     -
                                 {% endif %}
