--- a/django_project/web/templates/crop_field_form.html
+++ b/django_project/web/templates/crop_field_form.html
@@ -224,6 +224,7 @@ var individualEntries = {{individual_entries | safe}};
 $(function() {
 
     var options = {
+        currentUserId: {{user.id}},
         draw: true,
         map_id: 'map',
         geom_field_id: 'id_area',
